<resources>
    <string name="app_name">TrempMe</string>
    <string name="login_etPassword">Password</string>
    <string name="login_etUserName">User Name</string>
    <string name="Register_etPassword_Validation">Validate Password</string>
    <string name="register_btn">Register</string>
    <string name="register_etPassword">Password</string>
    <string name="Register_etNickName">Nick Name</string>
    <string name="Register_etUserName">User Name</string>
    <string name="leaving_time">Leaving time:</string>
    <string name="today">Today</string>
    <string name="login">Login</string>
    <string name="not_registered_yet_click_here_to_register">Not registered yet? click here to register</string>
    <string name="available_rides">My Rides</string>
    <string name="rides_history">Rides History</string>
</resources>